tests/negative_tests/semantic_errors/call_non_function.c
// INVALID - Type Error: variable is not callable
// Expected: "not a function"
int main() {
    int x;
    int result;
    x = 5;
    result = x();  // ERROR: x is not a function
    return result;
}
